--- a/style/stylePage/stylePage.css
+++ b/style/stylePage/stylePage.css
@@ -31,6 +31,7 @@ html body {
 }
 #photographerDetails div h2 {
   color: #d3573c;
+  margin-top: -7px;
 }
 #photographerDetails div h3 {
   color: #901c1c;
@@ -188,6 +189,7 @@ html body {
   color: #901c1c;
   background: none;
   border: none;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 #photographerGallery .left {
   left: 32%;
@@ -204,6 +206,11 @@ html body {
   border: none;
   cursor: pointer;
   color: #901c1c;
+}
+#photographerGallery .close:hover {
+  background-color: rgba(255, 0, 0, 0.5);
+  color: white;
+  padding: 0px 5px 0px 5px;
 }
 @media (max-width: 1115px) {
   #photographerGallery .left {
@@ -319,7 +326,7 @@ html body {
   position: absolute;
   font-weight: bold;
   font-size: 1.2rem;
-  top: 27%;
+  top: 19%;
   left: 45%;
   background-color: #901c1c;
   border: none;
@@ -367,8 +374,9 @@ html body {
 }
 .button .close:hover,
 .button .close:focus {
-  color: black;
-  text-decoration: none;
+  background-color: rgba(255, 0, 0, 0.5);
+  color: white;
+  padding: 0px 5px 0px 5px;
   cursor: pointer;
 }
 .button .header__form {
@@ -413,6 +421,7 @@ html body {
   font-weight: 700;
   height: 35px;
   width: 170px;
+  cursor: pointer;
 }
 .button form label {
   font-size: 1.2rem;
