--- a/style/stylePage/stylePage.scss
+++ b/style/stylePage/stylePage.scss
@@ -600,7 +600,19 @@ html {
      
     }
   
-
+    @media(max-width: 480px) {
+      .button{
+        button{
+          left: 10%;
+        }
+    }
+    #close{
+      position: absolute;
+      top: 145px !important;
+      right: 0px !important;
+    }
+    }
+    
 
 
 select{
